changes for is_negex

--- a/code/EDA.ipynb
+++ b/code/EDA.ipynb
@@ -2902,7 +2902,7 @@
     "    if not affixal_negation:  # if it doesn't have any, add it to the list\n",
     "        final_ncs.add(token) \n",
     "\n",
-    "print(final_ncs)\n",
+    "final_ncs\n",
     "        \n",
     "with open(outputfile, 'w', encoding='utf8') as outfile:\n",
     "    for token in final_ncs:\n",
