--- a/code/EDA.ipynb
+++ b/code/EDA.ipynb
@@ -2867,7 +2867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 88,
    "id": "d983d03d-fe3e-4408-ab13-5d956cdde0b7",
    "metadata": {},
    "outputs": [
@@ -2880,7 +2880,7 @@
     }
    ],
    "source": [
-    "outputfile= '../code/is_neg_ex.txt'\n",
+    "outputfile= '../code/single_neg_cues.txt'\n",
     "\n",
     "neg_prefix = {\"dis\", \"im\", \"in\", \"ir\", \"un\"}\n",
     "neg_suffix = {\"less\", \"lessness\", \"lessly\"}\n",
@@ -2902,11 +2902,34 @@
     "    if not affixal_negation:  # if it doesn't have any, add it to the list\n",
     "        final_ncs.add(token) \n",
     "\n",
-    "final_ncs\n",
+    "print(final_ncs)\n",
     "        \n",
     "with open(outputfile, 'w', encoding='utf8') as outfile:\n",
     "    for token in final_ncs:\n",
     "        outfile.write(token + '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "138e6749-6ba1-4758-8226-72b768820334",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'inputfile' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-89-5ef82c3770b3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minputfile\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'r'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'utf8'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0minfile\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m         \u001b[0mneg_cue\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minfile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreadlines\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'inputfile' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "with open(inputfile, 'r', encoding='utf8') as infile:\n",
+    "        neg_cue = infile.readlines()"
    ]
   }
  ],
