--- a/code/EDA.ipynb
+++ b/code/EDA.ipynb
@@ -2867,7 +2867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 72,
    "id": "d983d03d-fe3e-4408-ab13-5d956cdde0b7",
    "metadata": {},
    "outputs": [
@@ -2875,12 +2875,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"n't\", 'nowhere', 'none', 'neglected', 'prevent', 'save', 'nor', 'except', 'fail', 'refused', 'without', 'not', 'nothing', 'nobody', 'no', 'never', 'neither', 'absence'}\n"
+      "['absence', 'except', 'fail', \"n't\", 'neglected', 'neither', 'never', 'no', 'nobody', 'none', 'nor', 'not', 'nothing', 'nowhere', 'prevent', 'refused', 'save', 'without']\n"
      ]
     }
    ],
    "source": [
-    "outputfile= '../code/single_neg_cues.txt'\n",
+    "outputfile = '../code/single_neg_cues_train.txt'\n",
     "\n",
     "neg_prefix = {\"dis\", \"im\", \"in\", \"ir\", \"un\"}\n",
     "neg_suffix = {\"less\", \"lessness\", \"lessly\"}\n",
@@ -2902,17 +2902,17 @@
     "    if not affixal_negation:  # if it doesn't have any, add it to the list\n",
     "        final_ncs.add(token) \n",
     "\n",
-    "print(final_ncs)\n",
-    "        \n",
+    "print(sorted(final_ncs))\n",
+    "      \n",
     "with open(outputfile, 'w', encoding='utf8') as outfile:\n",
-    "    for token in final_ncs:\n",
+    "    for token in sorted(final_ncs):\n",
     "        outfile.write(token + '\\n')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2926,7 +2926,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
